Added:Modified some codes
